# tesberry

./: .env  .gitignore  README.md  can_messages.py  compose.yml  configure_elm327.py  connect.py  enableAmbientLight.py  package.json  setup-dev.sh  setup.sh  startup.sh  tsconfig.json  update.sh
config/nodered/: .config.nodes.json  .config.nodes.json.backup  .config.runtime.json  .flows.json.backup  flows.json  flows_cred.json  package-lock.json  package.json
debug/: dump.sh  play.sh
docker/savvycan-mqtt/: Dockerfile  requirements.txt  savvycan-mqtt.py
docs/: database.md  development.md  elm327_at_commands.md  hardware.md  mqtt.md  notes.md
python/: async.py  enableAmbientLight.py  index.py  listenForAmbientLightCAN.py  requirements.txt  setup.sh  test.py
resources/db/: Model3CAN.dbc  Model3CAN.kcd
rust/bridge/: Cargo.toml  README.md  build.rs  generate.sh  watch.sh
rust/bridge/src/: main.rs  messages.rs  mqtt.rs
src/: index.ts  mqtt.ts
src/bridge/: index.py
test/: enableAmbientLightOBD.py
