[package]
name = "tesberry-bridge"
version = "1.0.0"
authors = ["Paul Tiedtke <PaulTiedtke@web.de>"]
edition = "2021"
repository = "https://github.com/tesberry/tesberry"

[dependencies]
arbitrary = { version = "1.0", optional = true }
bitvec = { version = "0.21", default-features = false }
canparse = "0.1"
futures-util = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tokio-socketcan = "0.3.1"

[dev-dependencies]
cargo-watch = "8.1.1"

[build-dependencies]
anyhow = "1.0"
dbc-codegen = "0.1.0"

[[bin]]
name = "bridge"
path = "src/main.rs"

[features]
default = ["debug", "arb", "range_checked"]
arb = ["arbitrary"]
debug = []
range_checked = []
